--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
   <head>
   </head>
   <body>
-    test
+    <form
+      method="POST"
+      action="">
+      <label>
+        Name
+        <input name="name" type="text" />
+      </label>
+      <label>
+        Email
+        <input name="email" type="email" />
+      </label>
+      <label>
+        Account number
+        <input name="account" type="password" />
+      </label>
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
